# KCD2019-PyTorchCpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  example-app.cpp
DCGAN/: CMakeLists.txt  DCGAN.cpp
MNIST/: CMakeLists.txt  MNIST.cpp
SimpleTensor/: CMakeLists.txt  CMakeSettings.json
